# cryptosock

./: .gitignore  CMakeLists.txt
example/: main.cpp
src/: cryptosock.h
src/client/: client.h
src/server/: server.cpp  server.h
test/: server_test.cpp
